--- a/index.html
+++ b/index.html
@@ -710,7 +710,16 @@
                 const clickY = y * (originalPage.height / canvas.height);
 
                 await analyzeGdtAtPoint(pageNum, clickX, clickY);
-                showGdtHighlight(x, y);
+                
+                // Show visual feedback
+                const highlight = document.createElement('div');
+                highlight.className = 'gdt-highlight';
+                highlight.style.left = (x - 150) + 'px';  // 300/2 for center
+                highlight.style.top = (y - 100) + 'px';   // 200/2 for center
+                highlight.style.width = '300px';
+                highlight.style.height = '200px';
+                viewer.appendChild(highlight);
+                setTimeout(() => highlight.remove(), 2000);
 
             } else {
                 // --- NEW, SMARTER BALLOONING MODE LOGIC ---
@@ -720,7 +729,7 @@
                 // Check if the clicked word is a number (handles integers and decimals)
                 const isNumeric = !isNaN(parseFloat(clickedWord)) && isFinite(clickedWord);
                 
-                // Use the next available number
+                // Get the next sequential number
                 const balloonNumber = balloonCounter++;
                 const rect = canvas.getBoundingClientRect();
                 const position = {
