--- a/index.html
+++ b/index.html
@@ -154,6 +154,21 @@
             color: #d1d1d1 !important;
         }
 
+        /* Theme toggle styles */
+        #theme-toggle {
+            transition: all 0.3s ease;
+        }
+
+        body.dark #theme-toggle {
+            background-color: #2d2d2d !important;
+            border-color: #404040 !important;
+            color: #e5e5e5 !important;
+        }
+
+        #theme-toggle:hover {
+            transform: scale(1.05);
+        }
+
         /* Base container styles */
         #viewer-container {
             position: relative;
@@ -235,6 +250,18 @@
 </head>
 <body class="bg-gray-100 text-gray-800">
 
+    <!-- Theme Toggle Button (Fixed Position) -->
+    <button id="theme-toggle" class="fixed top-4 left-4 px-3 py-1 bg-white border rounded-md shadow-sm flex items-center z-50">
+        <svg class="w-4 h-4 mr-1 dark-mode-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+            <path d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" stroke-width="2"/>
+        </svg>
+        <svg class="w-4 h-4 mr-1 light-mode-icon hidden" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+            <path d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            <circle cx="12" cy="12" r="4" stroke-width="2"/>
+        </svg>
+        Theme
+    </button>
+
     <div class="container mx-auto p-4">
         <!-- ... (Header HTML is the same) ... -->
         <header class="text-center mb-6">
@@ -264,15 +291,6 @@
                                 </svg>
                                 Rotate
                             </button>
-                            <button id="theme-toggle" class="px-3 py-1 bg-white border rounded-md shadow-sm flex items-center">
-                                <svg class="w-4 h-4 mr-1 dark-mode-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                                    <path d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" stroke-width="2"/>
-                                </svg>
-                                <svg class="w-4 h-4 mr-1 light-mode-icon hidden" viewBox="0 0 24 24" fill="none" stroke="currentColor">
-                                    <path d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                    <circle cx="12" cy="12" r="4" stroke-width="2"/>
-                                </svg>
-                                Theme
                         </div>
                         <button id="reset-labels-btn" class="px-4 py-1 bg-red-50 text-red-600 border border-red-200 rounded-md shadow-sm hover:bg-red-100">
                             Reset Labels
